/*
 * $Id: ChangeLog,v 1.4977 2006/05/19 00:44:36 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-05-21 11:30 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * bin/hb-func.sh
    * added cgi to the lib list
  * source/cgi/include/Makefile
    * added cgi.ch
  - source/cgi/make_b32.bat
  - source/cgi/make_vc.bat
  - source/cgi/makefile.bc
  - source/cgi/makefile.vc
  - source/misc/make_b32.bat
  - source/misc/make_vc.bat
  - source/misc/makefile.bc
  - source/misc/makefile.vc
  * source/rtl/teditor.prg
    * removed tracelog and fixed text selection
	 
2006-05-19 02:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbrddfpt.h
  * xharbour/source/rdd/dbffpt/dbffpt1.c
    * added support for NIL value in SIX3 FPT files

  * xharbour/source/rtl/cdpapi.c
  * xharbour/source/rtl/console.c
    * cleaned some GCC4 warnings

  * xharbour/include/hbxvm.h
  * xharbour/source/vm/hvm.c
  * xharbour/source/compiler/gencc.c
    * updated TRY/{CATCH,FINALLY}/END in -gc4 mode to respect recent
      modifications in generated PCODE and changed semantic for
      TRY/FINALLY/END

2006-05-17 00:35 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/bin/hb-func.sh
    * added support -go[0-3] and other -g* switches to xhb* scripts

  * xharbour/include/hbapiitm.h
  * xharbour/source/vm/itemapi.c
    + added hb_itemGetSymbol()

  * xharbour/include/hbfast.h
    + added hb_itemMove() macro mapped to hb_itemForwardValue()

  * xharbour/include/hbapirdd.h
    * changed definition of SUPERTABLE for optional dynamic overloading
      this modification will not effect existing code

  * xharbour/include/hbvm.h
  * xharbour/include/hbtypes.h
  * xharbour/source/vm/hvm.c
  * xharbour/source/vm/maindllp.c
    * updated hb_vmProcessDllSymbols()/VM_PROCESS_DLL_SYMBOLS to return