@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4977 2006/05/19 00:44:36 druzus Exp $
+ * $Id: ChangeLog,v 1.4978 2006/05/21 09:22:07 lf_sfnet Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-05-23 12:20 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
+  * include/hbstack.h
+  * source/vm/estack.c
+    + Added HB_EXPORT to hb_stackNewFrame() and hb_stackOldFrame()
+
+  * source/vm/hvm.c
+    * Removed a REVIEW comment and uncommented an hb_stackPop() in HB_P_ENDFINALLY
 
 2006-05-21 11:30 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
   * bin/hb-func.sh
@@ -23,7 +31,7 @@
   - source/misc/makefile.vc
   * source/rtl/teditor.prg
     * removed tracelog and fixed text selection
-	 
+
 2006-05-19 02:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * xharbour/include/hbrddfpt.h
   * xharbour/source/rdd/dbffpt/dbffpt1.c
@@ -131,7 +139,7 @@
   * source/rtl/tget.prg
     ! fixed HowMuchNumeric() function to show value in numeric var with
       picture "@E 999.99 %", as reported by Enrico M. Giordano.
-    ! fixed ParsePict() method to not extract left spaces before "9" 
+    ! fixed ParsePict() method to not extract left spaces before "9"
       in picture of numeric var, example "@E  999.99".
     ! fixed VarGet() method to maintain ::original value when exit
       with ESC before start get edition.
